# shaderc

./: .gitignore  CMakeLists.txt  build-version.inc.in
cmake/: build-version.inc.in  config.cmake.in  shadercConfig.cmake.in  utils.cmake
cmake/Hunter/: config.cmake
glslc/: CMakeLists.txt
glslc/test/: CMakeLists.txt
libshaderc/: CMakeLists.txt
libshaderc_spvc/: CMakeLists.txt
libshaderc_spvc/src/: spvc.cc
libshaderc_util/: CMakeLists.txt
spvc/: CMakeLists.txt
